# marcstreeterdev-manifests-fastapi

./: README.md  cookiecutter.json  copier.yml
{{ project_kebab }}/: .copier-answers.yml  .env.example.jinja  .gitignore  .tool-versions.jinja  Dockerfile  Dockerfile.jinja  README.md.jinja  Tiltfile.jinja  justfile  justfile.jinja  pyproject.toml.jinja
{{ project_kebab }}/.github/workflows/: ci.yml
{{ project_kebab }}/manifests/: Chart.yaml.jinja  values-dev.yaml  values-dev.yaml.jinja  values.yaml  values.yaml.jinja
{{ project_kebab }}/manifests/templates/: _helpers.tpl  deployment.yaml  service.yaml
{{ project_kebab }}/scripts/: setup_venv.sh  start.sh
{{ project_kebab }}/src/core/: settings.py
{{ project_kebab }}/src/services/: example_service.py.jinja
{{ project_slug }}/: pyproject.toml  pyproject.toml.jinja  tiltfile
{{ project_slug }}/manifests/: values.yaml
{{ project_slug }}/src/: __init__.py  main.py  routes.py
{{ project_slug }}/src/api/: health.py  health_test.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  justfile  pyproject.toml  tiltfile
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/manifests/: values-dev.yaml  values.yaml
{{cookiecutter.project_slug}}/manifests/templates/: deployment.yaml
{{cookiecutter.project_slug}}/scripts/: setup_venv.sh  start.sh
{{cookiecutter.project_slug}}/src/: __init__.py  main.py
{{cookiecutter.project_slug}}/src/api/: example.py  example_test.py  health.py  health_test.py
{{cookiecutter.project_slug}}/src/services/: example_service.py
